[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/events/conquer.png" type="Texture" id=1]
[ext_resource path="res://scripts/behaviors/EventCard.gd" type="Script" id=2]
[ext_resource path="res://resources/themes/anneke.tres" type="Theme" id=3]

[node name="EventPopup" type="WindowDialog"]
visible = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1340.0
margin_bottom = -540.0
theme = ExtResource( 3 )
popup_exclusive = true
resizable = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventPlacard" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="EventPlacard"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="EventPlacard/VBoxContainer"]
margin_right = 580.0
margin_bottom = 34.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventTitle" type="Label" parent="EventPlacard/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 573.0
margin_bottom = 27.0
text = "EVENT TITLE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EventPicture" type="TextureRect" parent="EventPlacard/VBoxContainer"]
margin_top = 38.0
margin_right = 580.0
margin_bottom = 208.0
rect_min_size = Vector2( 0, 170 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer2" type="PanelContainer" parent="EventPlacard/VBoxContainer"]
margin_top = 212.0
margin_right = 580.0
margin_bottom = 268.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlavorText" type="RichTextLabel" parent="EventPlacard/VBoxContainer/PanelContainer2"]
margin_left = 7.0
margin_top = 7.0
margin_right = 573.0
margin_bottom = 49.0
bbcode_enabled = true
bbcode_text = "FLAVOR TEXT
That is flavorful"
text = "FLAVOR TEXT
That is flavorful"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionContainer" type="VBoxContainer" parent="EventPlacard"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 276.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Option" type="Button" parent="EventPlacard/OptionContainer"]
margin_top = 8.0
margin_right = 580.0
margin_bottom = 46.7363
text = "Option 1"

[node name="Option2" type="Button" parent="EventPlacard/OptionContainer"]
margin_top = 50.0
margin_right = 580.0
margin_bottom = 88.7363

[node name="Option3" type="Button" parent="EventPlacard/OptionContainer"]
margin_top = 92.0
margin_right = 580.0
margin_bottom = 130.736

[node name="Option4" type="Button" parent="EventPlacard/OptionContainer"]
margin_top = 134.0
margin_right = 580.0
margin_bottom = 172.736

[node name="Option5" type="Button" parent="EventPlacard/OptionContainer"]
margin_top = 176.0
margin_right = 580.0
margin_bottom = 214.736

[node name="Option6" type="Button" parent="EventPlacard/OptionContainer"]
margin_top = 218.0
margin_right = 580.0
margin_bottom = 256.736
